# py_project_oop

./: .gitignore  README.md  main.py  pyproject.toml
config/: output.json  products.json
module/: MyError.py  category.py  conftest.py  function.py  main.py  product.py  test_classes.py
src/: category.py  conftest.py  function.py  main.py  myerror.py  myoutput.txt  product.py  test_classes.py
tests/: conftest.py  myoutput.txt  test_classes.py  test_main.py
