[tool.poetry]
name = "py-projekt-oop1"
version = "0.1.0"
description = ""
authors = ["Admin <alexander_kozhanov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
